Add opentsdb to config file

--- a/templates/config/base.conf.j2
+++ b/templates/config/base.conf.j2
@@ -34,6 +34,8 @@
             {%- if config_coordinator.extend(config_parameters) -%}{%- endif -%}
         {%- elif config_name == 'retention' -%}
             {%- if config_retention.extend(config_parameters) -%}{%- endif -%}
+        {%- elif config_name == 'opentsdb' -%}
+            {%- if config_opentsdb.extend(config_parameters) -%}{%- endif -%}
         {%- elif config_name == 'shard_precreation' -%}
             {%- if config_shard_precreation.extend(config_parameters) -%}{%- endif -%}
         {%- elif config_name == 'monitor' -%}
